--- a/ui/src/app/components/discussion/discussion.component.scss
+++ b/ui/src/app/components/discussion/discussion.component.scss
@@ -1,17 +1,8 @@
-app-markdown-edit {
-  display: table;
-  width: 100%;
-  padding-right: 80px;
-  float: left;
-}
-
 .special-nav-button {
-  position: absolute;
-  bottom: .5rem;
-  right: 20px;
+  height: 39px;
+  margin-top: 32px;
 }
 
 .bottom-margin {
-  margin-bottom: 115px;
+  margin-bottom: 142px;
 }
-
