--- a/ui/src/app/components/onboard-alert/onboard-alert.component.html
+++ b/ui/src/app/components/onboard-alert/onboard-alert.component.html
@@ -1,4 +1,4 @@
-<alert type="info" dismissible="true" (close)="readOnboardAlert()">
+<alert type="info" dismissible="true" (onClose)="readOnboardAlert()">
   <h3>Welcome to FlowChat!</h3>
   <p><a [routerLink]="['/']">FlowChat</a> is an open-source,
     self-hostable, <strong>live-updating</strong> discussion
