--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -1,6 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 
+@import './app/styles/_variables';
 @import './app/styles/bootstrap';
+@import './app/styles/_bootswatch';
 @import '../node_modules/angular2-toaster/toaster.css';
 @import '../node_modules/font-awesome/css/font-awesome.min.css';
 @import './app/styles/card-columns';
