--- a/ui/src/app/components/onboard-alert/onboard-alert.component.html
+++ b/ui/src/app/components/onboard-alert/onboard-alert.component.html
@@ -1,32 +1,27 @@
-<alert type="info" dismissible="true" (onClose)="readOnboardAlert()">
-  <h3>Welcome to FlowChat!</h3>
-  <p><a [routerLink]="['/']">FlowChat</a> is an open-source,
-    self-hostable, <strong>live-updating</strong> discussion
-    platform, featuring communities, discussions with
-    threaded conversations, and voting.
-  </p>
-  <p>It can act as an alternative to forums, as a private
-    team communication platform(like slack), a content
-    creation platform(like reddit), or a voting/polling
-    platform like
-    <a href="https://referendum.ml" target="blank_">referendum</a>.</p>
-  <p>Flowchat tries to solve the problem of having a fluid,
-    free-feeling group chat, while allowing for side
-    conversations so that every comment isn’t at the
-    top level. Multiple conversations can take place
-    <strong>at once</strong>, without interrupting
-    the flow of the chatroom.</p>
-  <p>It uses <a href="http://rangevoting.org/UniqBest.html"
-      target="blank_">range voting</a>(also known as
-    olympic score voting) for sorting comments, discussions,
-    and communities. Range voting is <em>more expressive</em>    than simple thumbs up or thumbs down votes.</p>
-  <p>Check out the default community, <a [routerLink]="['/community',1]">vanilla</a>,
-    or create your own. Check out a sample discussion
-    <a [routerLink]="['/discussion',13]">here</a>.</p>
-  <p>
-  	<a href=" https://www.reddit.com/r/flowchat/
+<div class="card">
+  <div class="card-block">
+    <div class="row">
+      <div class="col-sm-11">
+        <h3>Welcome to FlowChat!</h3>
+      </div>
+      <div class="col-sm-1 text-right">
+        <i class="fa fa-fw fa-close close-btn" (click)="readOnboardAlert()"></i>
+      </div>
+    </div>
+    <p><a [routerLink]="['/']">FlowChat</a> is an open-source, self-hostable, <strong>live-updating</strong> discussion platform, featuring communities, discussions with threaded conversations, and voting.
+    </p>
+    <p>It can act as an alternative to forums, as a private team communication platform(like slack), a content creation platform(like reddit), or a voting/polling platform like
+      <a href="https://referendum.ml" target="blank_">referendum</a>.</p>
+    <p>Flowchat tries to solve the problem of having a fluid, free-feeling group chat, while allowing for side conversations so that every comment isn’t at the top level. Multiple conversations can take place
+      <strong>at once</strong>, without interrupting the flow of the chatroom.</p>
+    <p>It uses <a href="http://rangevoting.org/UniqBest.html" target="blank_">range voting</a>(also known as olympic score voting) for sorting comments, discussions, and communities. Range voting is <em>more expressive</em> than simple thumbs up or thumbs down votes.</p>
+    <p>Check out the default community, <a [routerLink]="['/community',1]">vanilla</a>, or create your own. Check out a sample discussion
+      <a [routerLink]="['/discussion',13]">here</a>.</p>
+    <p>
+      <a href=" https://www.reddit.com/r/flowchat/
       " target="blank_"><i class="fa fa-fw fa-2x fa-reddit"></i></a>
-    <a href="https://github.com/dessalines/flowchat" target="_blank"><i class="fa fa-fw fa-2x fa-github"></i></a>
-    <a href="https://github.com/dessalines/flowchat/blob/master/CHANGELOG.md" target="_blank">Changelog</a>
-  </p>
-</alert>
+      <a href="https://github.com/dessalines/flowchat" target="_blank"><i class="fa fa-fw fa-2x fa-github"></i></a>
+      <a href="https://github.com/dessalines/flowchat/blob/master/CHANGELOG.md" target="_blank">Changelog</a>
+    </p>
+  </div>
+</div>
