Fix readme, change search button. Fixes #83.

--- a/ui/src/app/components/navbar/navbar.component.html
+++ b/ui/src/app/components/navbar/navbar.component.html
@@ -20,7 +20,7 @@
               placeholder="Search"
               name="discussion_form"
               >
-            <button class="btn btn-outline-primary mr-sm-2" type="submit"><i class="fa fa-fw fa-search"></i></button>
+            <button class="btn btn-outline-primary mr-sm-2" type="submit"><i class="fa fa-search"></i></button>
           </form>
         </li>
         <li class="nav-item">
