--- a/ui/src/app/components/discussion-card/discussion-card.component.html
+++ b/ui/src/app/components/discussion-card/discussion-card.component.html
@@ -42,7 +42,7 @@
           <li *ngIf="discussion.community" class="badge badge-primary list-inline-item">
             <a class="link-unstyled" [routerLink]="['/community', discussion.community.id]">{{removeQuotes(discussion.community.name)}}</a>
           </li>
-          <li class="badge badge-default list-inline-item" *ngFor="let tag of discussion.tags">
+          <li class="badge badge-info list-inline-item" *ngFor="let tag of discussion.tags">
             <a class="link-unstyled" [routerLink]="['/tag', tag.id]">{{removeQuotes(tag.name)}}</a>
           </li>
         </ul>
@@ -53,7 +53,7 @@
           <li *ngIf="!isCreator" role="button" class="list-inline-item"
             (click)="toggleShowVoteSlider()"
             placement="bottom" tooltip="Vote"><i class="fa fa-fw fa-star-half-o"></i></li>
-          <li *ngIf="discussion.avgRank" class="badge badge-pill badge-default list-inline-item"
+          <li *ngIf="discussion.avgRank" class="badge badge-pill badge-info list-inline-item"
             placement="bottom" tooltip="Average Score">
             {{discussion.avgRank}}</li>
           <li *ngIf="discussion.userRank" class="badge badge-pill badge-info list-inline-item"
@@ -171,7 +171,7 @@
           </div>
           <ul *ngIf="discussion.tags" class="col-md-6 list-inline form-control-label">
             <li role="button" (click)="removeTag(tag)"
-              class="badge badge-default list-inline-item"
+              class="badge badge-info list-inline-item"
               *ngFor="let tag of discussion.tags">
               <span>{{removeQuotes(tag.name)}}<i class="fa fa-fw fa-remove"></i></span>
             </li>
@@ -210,7 +210,7 @@
           </div>
           <ul *ngIf="discussion.privateUsers" class="col-md-6 list-inline form-control-label">
             <li role="button" (click)="removePrivateUser(privateUser)"
-              class="badge badge-default list-inline-item"
+              class="badge badge-info list-inline-item"
               *ngFor="let privateUser of discussion.privateUsers">
               <span>{{privateUser.name}}<i class="fa fa-fw fa-remove"></i></span>
             </li>
@@ -238,7 +238,7 @@
           </div>
           <ul *ngIf="discussion.blockedUsers" class="col-md-6 list-inline form-control-label">
             <li role="button" (click)="removeBlockedUser(blockedUser)"
-              class="badge badge-default list-inline-item"
+              class="badge badge-info list-inline-item"
               *ngFor="let blockedUser of discussion.blockedUsers">
               <span>{{blockedUser.name}}<i class="fa fa-fw fa-remove"></i></span>
             </li>
