--- a/ui/src/app/components/home/home.component.html
+++ b/ui/src/app/components/home/home.component.html
@@ -7,7 +7,7 @@
           <h3>Trending Discussions</h3>
           <small>
         <ul *ngIf="popularTags " class="list-inline ">trending tags:
-          <li class="badge badge-default list-inline-item "
+          <li class="badge badge-info list-inline-item "
           *ngFor="let tag of popularTags ">
             <a class="link-unstyled
         " [routerLink]="[ '/tag', tag.id] ">{{removeQuotes(tag.name)}}</a>
