--- a/ui/src/app/styles/_variables.scss
+++ b/ui/src/app/styles/_variables.scss
@@ -111,9 +111,9 @@ $gray-lighter:              #ddd;
 $gray-lightest:             #f7f7f9 !default;
 
 // Reassign color vars to semantic color scheme
-$brand-primary:             #19B5FE;
+$brand-primary:             #4582EC;
 $brand-success:             #02B875;
-$brand-info:                #19B5FE !default;
+$brand-info:                #5bc0de !default;
 $brand-warning:             #f0ad4e !default;
 $brand-danger:              #d9534f !default;
 $brand-inverse:             $gray-dark !default;
