--- a/ui/src/app/components/navbar/navbar.component.html
+++ b/ui/src/app/components/navbar/navbar.component.html
@@ -19,6 +19,7 @@
               class="form-control ml-sm-1 mr-sm-2 search-box" type="text"
               placeholder="Search"
               name="discussion_form"
+              autocomplete="off"
               >
             <button class="btn btn-outline-primary mr-sm-2" type="submit"><i class="fa fa-search"></i></button>
           </form>
