--- a/ui/src/app/components/comment/comment.component.html
+++ b/ui/src/app/components/comment/comment.component.html
@@ -1,5 +1,5 @@
-<div [id]="'comment_' + comment.id" class="card-block">
-  <ul class="list-inline">
+<div [id]="'comment_' + comment.id" class="card-block pb-0">
+  <ul class="list-inline mb-0">
     <li class="text-muted list-inline-item" role="button"
       (click)="collapsed = !collapsed">{{collapseText()}}</li>
     <li class="list-inline-item">
@@ -9,7 +9,7 @@
     </li>
     <li *ngIf="comment.avgRank" class="badge badge-pill badge-info list-inline-item"
       placement="bottom" tooltip="Average Score">{{comment.avgRank}}</li>
-    <li *ngIf="rank" class="badge badge-pill badge-info list-inline-item"
+    <li *ngIf="rank" class="badge badge-pill badge-warning list-inline-item"
       placement="bottom" tooltip="Your Vote">{{rank}}</li>
     <li *ngIf="comment.avgRank" class="text-muted list-inline-item"><small>{{comment.numberOfVotes}} votes</small></li>
     <li *ngIf="comment.deleted" class="text-muted list-inline-item"><small><i>deleted {{comment.modified | moment}} by 
@@ -21,7 +21,7 @@
     </span>
   </ul>
 </div>
-<div *ngIf="!collapsed" class="card-block">
+<div *ngIf="!collapsed" class="card-block pt-0">
   <div *ngIf="!comment.deleted">
     <div *ngIf="!showEdit" class="card-text"
       [class.mark]="isCommentNew()" [innerHTML]="comment.text | markdown">
