--- a/ui/src/app/styles/_variables.scss
+++ b/ui/src/app/styles/_variables.scss
@@ -249,10 +249,10 @@ $font-family-serif:      Georgia, Cambria, "Times New Roman", Times, serif;
 $font-family-monospace:  Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
 $font-family-base:       $font-family-sans-serif !default;
 
-$font-size-base: 1.063rem;
-$font-size-lg:   1.25rem !default;
-$font-size-sm:   .875rem !default;
-$font-size-xs:   .75rem !default;
+$font-size-base: .8rem;
+$font-size-lg:   1rem !default;
+$font-size-sm:   .6rem !default;
+$font-size-xs:   .4rem !default;
 
 $font-weight-normal: normal !default;
 $font-weight-bold: bold !default;
