--- a/ui/src/app/styles/extras.scss
+++ b/ui/src/app/styles/extras.scss
@@ -62,7 +62,6 @@ blockquote {
 }
 
 .dropdown-menu {
-  margin: 11px 0 0;
   box-shadow: 0 1px 4px rgba(0, 0, 0, .3);
 }
 
@@ -168,3 +167,7 @@ html [type="button"],
 //   position: relative;
 //   z-index: 999;
 // }
+
+.inline {
+  display: inline;
+}
