Fixing popular tags issue. Fixes #94.

--- a/ui/src/app/components/home/home.component.html
+++ b/ui/src/app/components/home/home.component.html
@@ -10,7 +10,7 @@
         " [routerLink]="[ '/tag', tag.id] ">{{removeQuotes(tag.name)}}</a>
           </li>
         </ul>
-        <ul *ngIf="popularCommunities " class="list-inline inline">trending communities:
+        <ul *ngIf="popularCommunities " class="list-inline inline">Trending communities:
           <li class="badge badge-primary list-inline-item "
           *ngFor="let community of popularCommunities ">
             <a class="link-unstyled
