--- a/ui/src/app/components/sidebar/sidebar.component.html
+++ b/ui/src/app/components/sidebar/sidebar.component.html
@@ -3,14 +3,14 @@
     <i class="fa fa-fw fa-users"></i> Communities
   </div>
   <ul *ngIf="!communityCollapsed" class="list-group">
-    <li class="list-group-item">
+    <li class="list-group-item" [class.active]="isActive('')">
       <a [routerLink]="['/']" class="link-unstyled overflow">Front page</a>
     </li>
-    <li class="list-group-item">
+    <li class="list-group-item" [class.active]="isActive('all')">
       <a [routerLink]="['/all']" class="link-unstyled overflow">All</a>
     </li>
     <li *ngFor="let community of userService.getFavoriteCommunities()"
-      class="list-group-item">
+      class="list-group-item" [class.active]="isActive('community', community.id)">
       <a [routerLink]="['/community', community.id]"
         class="link-unstyled overflow">{{community.name}}</a>
     </li>
@@ -23,7 +23,7 @@
   </div>
   <ul *ngIf="!discussionCollapsed" class="list-group">
     <li *ngFor="let discussion of userService.getFavoriteDiscussions()"
-      class="list-group-item overflow">
+      class="list-group-item overflow" [class.active]="isActive('discussion', discussion.id)">
       <a [routerLink]="['/discussion', discussion.id]"
         class="link-unstyled">{{discussion.title}}</a>
       <span role="button" (click)="userService.removeFavoriteDiscussion(discussion.id)"
