--- a/ui/src/app/components/discussion-card/discussion-card.component.html
+++ b/ui/src/app/components/discussion-card/discussion-card.component.html
@@ -3,11 +3,9 @@
     <div *ngIf="!editing">
       <div [ngClass]="{'row': !isCard() && hasImage(), 'row-fluid': !isCard() && !hasImage()}">
       <div [ngClass]="{'col-xs-2 col-xl-1 pr-0 pl-1': !isCard() && hasImage()}">
-      <a *ngIf="!isCard() && hasImage()"
-        href="{{discussion.link}}" target="_blank">
+      <div *ngIf="!isCard() && hasImage()">
         <div [innerHTML]="discussion.link | markdown"></div>
-     <!--    <div class="embed-responsive embed-responsive-1by1"><iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zkYCMjoM5vY" frameborder="0" allowfullscreen controls="2"></iframe></div> -->
-      </a>
+      </div>
       </div>
       <div [ngClass]="{'col-xs-10 col-xl-11': !isCard() && hasImage()}">
       <div [ngClass]="{
@@ -18,10 +16,9 @@
           <small *ngIf="isCreator"><i class="fa fa-fw fa-edit" role="button" (click)="toggleEditing()" placement="bottom" tooltip="Edit"></i></small>
         </h5>
       </div>
-      <a *ngIf="isCard() && hasImage()"
-        href="{{discussion.link}}" target="_blank">
+      <div *ngIf="isCard() && hasImage()">
         <div [innerHTML]="discussion.link | markdown"></div>
-      </a>
+      </div>
       <div [ngClass]="{
         'card-block': isCard(),
         'card-block-no-top': isCard()}">
