Fixing message count notification. Fixes #116.

--- a/ui/src/app/components/navbar/navbar.component.html
+++ b/ui/src/app/components/navbar/navbar.component.html
@@ -49,7 +49,7 @@
           <a class="nav-link link-unstyled" role="button"
             type="button" dropdownToggle placement="bottom"
             tooltip="Messages">
-            <span *ngIf="unreadMessages?.length > 0" class="badge badge-info navbar-label">{{unreadMessages?.length}}</span>
+            <span *ngIf="unreadMessages?.length > 0" class="badge badge-info navbar-label ml-2">{{unreadMessages?.length}}</span>
             <i class="fa fa-fw fa-envelope-o"></i>
           </a>
           <ul class="dropdown-menu messages-dropdown dropdown-menu-right"
