--- a/ui/src/app/components/navbar/navbar.component.html
+++ b/ui/src/app/components/navbar/navbar.component.html
@@ -65,7 +65,7 @@
                 <div [innerHTML]="message.text | markdown"></div>
                 <small>
                   <ul class="list-inline">
-                    <li class="list-inline-item">from {{message.userName}}</li>
+                    <li class="list-inline-item">from {{message.user.name}}</li>
                     <li *ngIf="message.deleted" class="text-muted list-inline-item"><small><i>deleted {{message.modified | moment}}</i></small></li>
                     <span *ngIf="!message.deleted">
                       <li *ngIf="!message.modified" class="text-muted list-inline-item"><small>{{message.created | moment}}</small></li>
