Add number of comments to discussion cards. Fixes #118.

--- a/ui/src/app/components/discussion-card/discussion-card.component.html
+++ b/ui/src/app/components/discussion-card/discussion-card.component.html
@@ -66,7 +66,9 @@
             <a [routerLink]="['/discussion', discussion.id]"
               class="link-unstyled">
               <i class="fa fa-fw fa-comments-o" placement="bottom"
-                tooltip="Comments"></i></a>
+                tooltip="Comments"></i>
+              <small *ngIf="discussion.numberOfComments">{{discussion.numberOfComments}} comments</small>
+            </a>
           </li>
           <li role="button" *ngIf="isCreator || isModerator"
             (click)="deleteDiscussion()" class="list-inline-item">
