Adding a bottom margin to list view. Fixes #120.

--- a/ui/src/app/styles/extras.scss
+++ b/ui/src/app/styles/extras.scss
@@ -133,7 +133,7 @@ a {
 }
 
 .list-group-item:last-child {
-  margin-bottom: -1px !important;
+  margin-bottom: -1px;
 }
 
 .card-heading + .list-group .list-group-item:first-child {
